# Fracture-reactivation-in-geothermal-reservoirs

./: .gitignore  README.md  pyproject.toml  run_all_bedretto_valter.py  run_all_simple_bedretto.py  run_bedretto_mb1_2d.py  run_bedretto_valter.py  run_iterative_linear_solver.py  run_paper_bedretto_valter.py  run_simple_bedretto.py
bedretto_mb1_2d/: geometry.py  initialization.py  model.py  physics.py
bedretto_valter/: geometry.py  injection.py  model.py  physics.py
common/: contact_mechanics.py  fracture_states.py  functions.py  iteration_export.py  newton_return_map.py  norms.py  numerics.py  statistics.py  utils.py
scripts/: checkout_porepy.sh  install_fthm.sh  install_ncp.sh  install_petsc.sh
simple_bedretto/: geometry.py  model.py  physics.py
src/egc/: __init__.py  newton_return_map.py
src/egc/models/: background_deformation.py  custom_prepare_simulation.py  equilibrium.py  hydrostatic_pressure.py  initial_condition.py  linear_compressibility.py  lithostatic_pressure.py  normal_permeability.py  simplifications.py
src/egc/numerics/: alternative_contact_equations.py  newton_return_map.py
src/egc/setup/: model_setup.py
